# mc-thesis

./: .#todo.org  .gitignore  LICENSE  Makefile  README.md  README.rst  Thesis.tex  Thesis.txss2  install_linux.sh  pyproject.toml  setenv.sh  todo.org
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace  workspace.json
.obsidian/plugins/obsidian-citation-plugin/: data.json
.obsidian/plugins/obsidian-dictionary-plugin/: data.json
.obsidian/plugins/obsidian-extract-pdf-highlights/: data.json
.obsidian/plugins/obsidian-languagetool-plugin/: data.json
.obsidian/plugins/recent-files-obsidian/: data.json
doc/setup/: README.org
doc/setup/pandoc/: setup.org
doc/setup/python/: readme.org  setup.org
doc/usage/: README.org
doc/usage/commands/: readme.org
doc/usage/editors/: readme.org
drafts/: .~lock.mchiapello-draft-2022-11-28.docx#  .~lock.mchiapello-draft-2022-11-30.docx#  .~lock.mchiapello-draft-2023-02-06.docx#  mchiapello-draft-2022-11-02.docx  mchiapello-draft-2022-11-03.docx  mchiapello-draft-2022-11-06.docx  mchiapello-draft-2022-11-14.docx  mchiapello-draft-2022-11-25.docx  mchiapello-draft-2022-11-27.docx  mchiapello-draft-2022-11-28.docx  mchiapello-draft-2022-11-29.docx  mchiapello-draft-2022-11-30.docx  mchiapello-draft-2022-12-07.docx  mchiapello-draft-2023-01-02.docx  mchiapello-draft-2023-01-26.docx  mchiapello-draft-2023-01-29.docx  mchiapello-draft-2023-02-02.docx  mchiapello-draft-2023-02-05.docx  mchiapello-draft-2023-02-06.docx  mchiapello-draft-2023-02-09.docx
notes/: ex-CAPITOLO I.md  note.md
output/: thesis.docx  thesis.html  thesis.tex
sample/: 31_chapter_1.md  34_chapter_4.md  35_chapter_5.md  oscola-samples.bib  references.bib
source/: .#metadata.yml  02_statement.md  09_chapter_1.md  09_heading.md  15_abstract.md  18_acknowledgements.md  24_abbreviations.md  29_body.md  30_abstract.md  31_chapter_1.md  32_chapter_2.md  33_chapter_3.md  34_chapter_4.md  35_chapter_5.md  37_conclusion.md  51_appendix_1.md  52_appendix_2.md  71_references.md  CAPITOLO I.md  metadata.yml  references.bib  references.rdf  references.yaml
source/.obsidian/: app.json  workspace
src/dve/cli/: __init__.py  __main__.py
src/dve/common/util/: file.py  time.py  trace.py
src/dve/config/data/: __init__.py
src/dve/scripts/: auto.py  runner.py
style/: oscola-web.csl  preamble.tex  reference-orig.docx  reference.docx  template.tex  universita-pontificia-salesiana-it+thesis.csl
style/csl/: bluebook-law-review.xml
tests/: test_suite.py
tests/dve_tests/cli/: test_cli.py
tests/dve_tests/common/: test_common.py
tests/dve_tests/common/util/: test_trace.py
tests/dve_tests/config/: test_config.py
